# Termina

./: .gitignore  README.md  RESUME.md
api/: .env.example  package-lock.json  package.json
api/src/: index.ts
api/src/routes/: escrow.ts  health.ts
api/src/services/: casper.ts
api/src/types/: index.ts
contracts/: Cargo.toml  Odra.toml  deploy.mjs  generate-pem.mjs  package-lock.json  package.json  run-deploy.sh  run-generate-pem.sh
contracts-native/: Cargo.toml
contracts-native/src/: escrow_minimal.rs  main.rs  minimal.rs  test_args.rs  test_both.rs  test_new_contract.rs  test_no_contract.rs  test_simple_contract.rs  test_string.rs
contracts/.keys/: secret_key.pem
contracts/src/: escrow.rs  events.rs  lib.rs  native_escrow.rs  types.rs
dashboard/: .env.example  package-lock.json  package.json
dashboard/scripts/: deploy-escrow.ts  test-args-deploy.ts  test-both-deploy.ts  test-escrow-minimal.ts  test-string-deploy.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/demo/escrow/: route.ts
dashboard/src/app/clients/: page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/demo/: page.tsx
dashboard/src/app/docs/: layout.tsx  page.tsx
dashboard/src/app/docs/demo/: page.tsx
dashboard/src/app/docs/how-it-works/: page.tsx
dashboard/src/app/docs/integration/: page.tsx
dashboard/src/app/docs/smart-contract/: page.tsx
dashboard/src/app/docs/use-cases/: page.tsx
dashboard/src/app/invoices/: page.tsx
dashboard/src/app/invoices/[id]/: page.tsx
dashboard/src/app/invoices/new/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/docs/: Navbar.tsx  Sidebar.tsx
dashboard/src/components/invoices/: InvoiceCard.tsx  InvoiceTable.tsx  StatsCard.tsx
dashboard/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
dashboard/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  StatusBadge.tsx  Textarea.tsx
dashboard/src/components/wallet/: WalletConnect.tsx
dashboard/src/hooks/: useInvoices.ts
dashboard/src/lib/: mock-data.ts  utils.ts
dashboard/src/lib/api/: client.ts  index.ts
dashboard/src/lib/casper/: CasperProvider.tsx  index.ts  keys.ts  types.ts
dashboard/src/types/: index.ts
docs/: MVP.md  casperhacathon.md  idea.md  plan.md  resume.md
